feat: enable SPE remoting

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -143,5 +143,6 @@ services:
       SITECORE_DEVELOPMENT_PATCHES: DevEnvOn,CustomErrorsOff,DebugOn,DiagnosticsOff,InitMessagesOff
       Sitecore_AppSettings_exmEnabled:define: "no" # remove to turn on EXM
       Sitecore_GraphQL_ExposePlayground: true
+      SITECORE_SPE_ELEVATION: "Allow"
     entrypoint: powershell -Command "& C:/tools/entrypoints/iis/XmCloudDevelopment.ps1"
                                                           	
