--- a/src/platform/App_Config/Include/z.Project/z.Sitecore.MCP.EnablePowerShellEndpoints.config
+++ b/src/platform/App_Config/Include/z.Project/z.Sitecore.MCP.EnablePowerShellEndpoints.config
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/"
-    xmlns:role="http://www.sitecore.net/xmlconfig/role/"
-    xmlns:set="http://www.sitecore.net/xmlconfig/">
+    xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore>
     <powershell>
       <services>
-        <restfulv1 set:enabled="true" set:a="b">
+        <restfulv1 set:enabled="true">
           <patch:attribute name="enabled">true</patch:attribute>
-          <patch:attribute name="c">d</patch:attribute>
         </restfulv1>
         <restfulv2>
           <patch:attribute name="enabled">true</patch:attribute>
