--- a/src/platform/App_Config/Include/z.Project/z.Sitecore.MCP.EnablePowerShellEndpoints.config
+++ b/src/platform/App_Config/Include/z.Project/z.Sitecore.MCP.EnablePowerShellEndpoints.config
@@ -4,28 +4,58 @@
   <sitecore>
     <powershell>
       <services>
-        <restfulv1 set:enabled="true">
+        <restfulv1>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </restfulv1>
         <restfulv2>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </restfulv2>
         <remoting>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </remoting>
         <fileDownload>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </fileDownload>
         <fileUpload>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </fileUpload>
         <mediaDownload>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </mediaDownload>
         <mediaUpload>
           <patch:attribute name="enabled">true</patch:attribute>
+          <authorization>
+            <add Permission="Allow" IdentityType="User" Identity="sitecore\admin" />
+          </authorization>
         </mediaUpload>
       </services>
     </powershell>
+    <pipelines>
+      <httpRequestBegin>
+        <processor type="Sitecore.Pipelines.HttpRequest.RequireAuthentication, Sitecore.Kernel" resolve="true">
+          <IgnoreRules hint="list:AddIgnoreRule">
+            <prefix hint="spe">^\/sitecore\smodules\/PowerShell.*</prefix>
+          </IgnoreRules>
+        </processor>
+      </httpRequestBegin>
+    </pipelines>
   </sitecore>
 </configuration>
