--- a/src/items/TestItems/Tests/Security/Clear-Item-ACL/Clear-Item-ACL-By-Path.yml
+++ b/src/items/TestItems/Tests/Security/Clear-Item-ACL/Clear-Item-ACL-By-Path.yml
@@ -1,24 +1,20 @@
 ﻿---
-ID: "f8ae75e0-ca84-43d9-8b04-14d97bd2f601"
-Parent: "a446536e-af08-42ff-9f4e-77f057a64bfb"
+ID: "ee8ffac9-11f9-4704-8788-90f90c6b337d"
+Parent: "2a8d0090-70b7-4e69-9617-dc3a4611f36a"
 Template: "76036f5e-cbce-46d1-af0a-4143f9b557aa"
-Path: "/sitecore/content/Home/Tests/Security/Protect-Item/Protect-Item-By-Id"
+Path: "/sitecore/content/Home/Tests/Security/Clear-Item-ACL/Clear-Item-ACL-By-Path"
 SharedFields:
-- ID: "9c6106ea-7a5a-48e2-8cad-f0f693b1e2d4"
-  Hint: __Read Only
-  Value: 
 - ID: "a4f985d9-98b3-4b52-aaaf-4344f6e747c6"
   Hint: __Workflow
   Value: "{A5BC37E7-ED96-4C1E-8590-A26E64DB55EA}"
 - ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
   Hint: __Shared revision
-  Value: "94a4fb4c-6a49-4cda-a2f5-2ef0bb0259e6"
+  Value: "7a3ce253-c8da-4c7b-bb6e-c60256256aa1"
+- ID: "dec8d2d5-e3cf-48b6-a653-8e69e2716641"
+  Hint: __Security
+  Value: 
 Languages:
 - Language: en
-  Fields:
-  - ID: "30e85e5d-e00a-4864-b358-7624d511deb4"
-    Hint: __Unversioned revision
-    Value: "2c376e87-84ed-4764-bf4b-24fd7bb28f51"
   Versions:
   - Version: 1
     Fields:
@@ -27,7 +23,7 @@ Languages:
       Value: "{190B1C84-F1BE-47ED-AA41-F42193D9C8FC}"
     - ID: "75577384-3c97-45da-a847-81b00500e250"
       Hint: Title
-      Value: "Protect-Item-By-Id"
+      Value: "Clear-Item-ACL-By-Path"
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8f597b46-ed18-4cab-82bf-612ac005ee3e"
+      Value: "c54ad679-cb74-4a68-98a0-33687bdbf8a2"
