--- a/src/platform/App_Config/Include/Sitecore.Demo.Verticals.config
+++ b/src/platform/App_Config/Include/Sitecore.Demo.Verticals.config
@@ -10,6 +10,8 @@
       <setting name="ExperienceEdge.EnableItemLanguageFallback" value="true"/>
       <setting name="ExperienceEdge.EnableFieldLanguageFallback" value="true"/>
       <setting name="Media.UrlSignatureExpirationTimeout" value="24:00:00" />
+      <!-- Item Service requires https by default, for local instance we disable this requirement. -->
+      <setting name="Sitecore.Services.AllowToLoginWithHttp" value="true" />
     </settings>
 
     <sites>
