--- a/src/platform/Platform.csproj
+++ b/src/platform/Platform.csproj
@@ -74,6 +74,7 @@
     <Content Include="App_Config\Include\z.Project\z.Sitecore.MCP.EnablePowerShellEndpoints.config" />
     <Content Include="App_Config\Include\z.Project\z.Spe.IdentityServer.config" />
     <Content Include="App_Config\Include\z.Project\z.TestIndexing.config" />
+    <Content Include="App_Config\Include\z.Project\z.ItemService.AllowHttp.config" />
     <None Include="Platform.wpp.targets" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="README.md" />
